Updates for RC1 and github issue #98
Updates to ensure we are accurate for RC1 and fixed issue #98

--- a/sql2019lab/03_Availability/adr/adr_recovery.ipynb
+++ b/sql2019lab/03_Availability/adr/adr_recovery.ipynb
@@ -25,15 +25,14 @@
         },
         {
             "cell_type": "code",
-            "source": "-- Step 1: Setup the database\r\nUSE master\r\nGO\r\nDROP DATABASE IF EXISTS gocowboys\r\nGO\r\nCREATE DATABASE gocowboys\r\nON PRIMARY\r\n(NAME = N'gocowboys_primary', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys.mdf', SIZE = 10Gb , MAXSIZE = UNLIMITED, FILEGROWTH = 65536KB)\r\nLOG ON \r\n(NAME = N'gocowboys_Log', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys_log.ldf', SIZE = 10Gb , MAXSIZE = UNLIMITED , FILEGROWTH = 65536KB)\r\nGO\r\nALTER DATABASE gocowboys SET RECOVERY SIMPLE\r\nGO",
+            "source": "-- Step 1: Setup the database\r\nUSE master\r\nGO\r\nDROP DATABASE IF EXISTS gocowboys\r\nGO\r\nCREATE DATABASE gocowboys\r\nON PRIMARY\r\n(NAME = N'gocowboys_primary', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys.mdf', SIZE = 10Gb , MAXSIZE = UNLIMITED, FILEGROWTH = 65536KB)\r\nLOG ON \r\n(NAME = N'gocowboys_Log', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys_log.ldf', SIZE = 40Gb , MAXSIZE = UNLIMITED , FILEGROWTH = 65536KB)\r\nGO\r\nALTER DATABASE gocowboys SET RECOVERY SIMPLE\r\nGO",
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
+                    "output_type": "error",
+                    "evalue": "Msg 0, Level 20, State 0, Line 0\r\nThe connection is broken and recovery is not possible.  The connection is marked by the server as unrecoverable.  No attempt was made to restore the connection.",
+                    "ename": "",
+                    "traceback": []
                 },
                 {
                     "output_type": "display_data",
@@ -59,12 +58,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:29.496"
+                        "text/html": "Total execution time: 00:00:53.308"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 22
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
@@ -128,12 +127,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:01:05.366"
+                        "text/html": "Total execution time: 00:01:16.062"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 23
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -165,23 +164,9 @@
                         "text/html": "Commands completed successfully."
                     },
                     "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(1000000 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:08:26.454"
-                    },
-                    "metadata": {}
                 }
             ],
-            "execution_count": 24
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -281,28 +266,27 @@
             "metadata": {},
             "outputs": [
                 {
+                    "output_type": "error",
+                    "evalue": "Msg 0, Level 20, State 0, Line 0\r\nThe connection is broken and recovery is not possible.  The connection is marked by the server as unrecoverable.  No attempt was made to restore the connection.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": "(100000 rows affected)"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "(1000000 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:22.089"
+                        "text/html": "Total execution time: 00:00:03.694"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
