--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
@@ -6,7 +6,15 @@
         },
         "language_info": {
             "name": "python",
-            "version": ""
+            "version": "3.6.6",
+            "mimetype": "text/x-python",
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "pygments_lexer": "ipython3",
+            "nbconvert_exporter": "python",
+            "file_extension": ".py"
         }
     },
     "nbformat_minor": 2,
@@ -18,7 +26,7 @@
                 "<img src=\"https://github.com/Microsoft/sqlworkshops/blob/master/graphics/solutions-microsoft-logo-small.png?raw=true\" alt=\"Microsoft\">\r\n",
                 "<br>\r\n",
                 "\r\n",
-                "# SQL Server 2019 big data cluster Tutorial - CTP 3.12\r\n",
+                "# SQL Server 2019 big data cluster Tutorial - CTP 3.2\r\n",
                 "## 00 - Scenario Overview and System Setup\r\n",
                 "\r\n",
                 "In this set of tutorials you'll work with an end-to-end scenario that uses SQL Server 2019's big data clusters to solve real-world problems. \r\n",
@@ -76,15 +84,15 @@
                 "\r\n",
                 "The first step for the solution is to copy the database backups from WWI from their location on the cloud and then up to your cluster. \r\n",
                 "\r\n",
-                "These commands use the `curl`program to pull the files down. [You can read more about curl here](https://curl.haxx.se/). \r\n",
+                "These commands use the `curl` program to pull the files down. [You can read more about curl here](https://curl.haxx.se/). \r\n",
                 "\r\n",
                 "The next set of commands use the `kubectl` command to copy the files from where you downloaded them to the data directory of the SQL Server 2019 bdc Master Instance. [You can read more about kubectl here](https://kubernetes.io/docs/reference/kubectl/overview/). \r\n",
                 "\r\n",
-                "Note that you will need to replace the section of the script marked with `*ReplaceWithClusterName*` with the name of your SQL Server 2019 bdc. (It does not need single or double quotes, just the letters of your cluster name.)\r\n",
+                "Note that you will need to replace the section of the script marked with `<ReplaceWithClusterName>` with the name of your SQL Server 2019 bdc. (It does not need single or double quotes, just the letters of your cluster name.)\r\n",
                 "\r\n",
                 "Notice also that these commands assume a `c:\\temp` location, if you want to use another drive or directory, edit accordingly.\r\n",
                 "\r\n",
-                "Once you have edited these commands, you can <a href=\"command:workbench.action.terminal.sendSequence?%7B%22text%22%3A%22code%20.%22%7D\">click here to open a Command Prompt on your system and copy and paste each block, one at a time and run them.</a>\r\n",
+                "Once you have edited these commands, you can open a Command Prompt on your system (Or press **CTL+`** for a Terminal)and copy and paste each block, one at a time and run them.\r\n",
                 "\r\n",
                 "In the next tutorial you will restore these databases on the Master Instance."
             ],
