Updates for saved notebooks and remove creds
Saved notebooks with results for Module 03 and 04. Ensure creds stripped from notebooks and T-SQL

--- a/sql2019lab/03_Availability/adr/adr_recovery.ipynb
+++ b/sql2019lab/03_Availability/adr/adr_recovery.ipynb
@@ -25,16 +25,10 @@
         },
         {
             "cell_type": "code",
-            "source": "-- Step 1: Setup the database\r\nUSE master\r\nGO\r\nDROP DATABASE IF EXISTS gocowboys\r\nGO\r\nCREATE DATABASE gocowboys\r\nON PRIMARY\r\n(NAME = N'gocowboys_primary', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys.mdf', SIZE = 10Gb , MAXSIZE = UNLIMITED, FILEGROWTH = 65536KB)\r\nLOG ON \r\n(NAME = N'gocowboys_Log', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys_log.ldf', SIZE = 40Gb , MAXSIZE = UNLIMITED , FILEGROWTH = 65536KB)\r\nGO\r\nALTER DATABASE gocowboys SET RECOVERY SIMPLE\r\nGO",
+            "source": "USE master\r\nGO\r\nDROP DATABASE IF EXISTS gocowboys\r\nGO\r\nCREATE DATABASE gocowboys\r\nON PRIMARY\r\n(NAME = N'gocowboys_primary', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys.mdf', SIZE = 10Gb , MAXSIZE = UNLIMITED, FILEGROWTH = 65536KB)\r\nLOG ON \r\n(NAME = N'gocowboys_log', FILENAME = 'C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\gocowboys_log.ldf', SIZE = 40Gb , MAXSIZE = UNLIMITED , FILEGROWTH = 65536KB)\r\nGO\r\nALTER DATABASE gocowboys SET RECOVERY SIMPLE\r\nGO",
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "error",
-                    "ename": "",
-                    "evalue": "Msg 0, Level 20, State 0, Line 0\r\nThe connection is broken and recovery is not possible.  The connection is marked by the server as unrecoverable.  No attempt was made to restore the connection.",
-                    "traceback": []
-                },
-                {
                     "output_type": "display_data",
                     "data": {
                         "text/html": "Commands completed successfully."
@@ -58,12 +52,19 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:53.308"
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:58.577"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -127,12 +128,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:01:16.062"
+                        "text/html": "Total execution time: 00:01:01.126"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -141,7 +142,7 @@
         },
         {
             "cell_type": "code",
-            "source": "-- Step 2: Delete all the rows in the table in a user defined transaction\r\n-- Make sure ADR is OFF\r\nUSE master\r\nGO\r\nALTER DATABASE gocowboys SET ACCELERATED_DATABASE_RECOVERY = OFF\r\nGO\r\n-- Try to delete a bunch of rows\r\nUSE gocowboys\r\nGO\r\nBEGIN TRAN\r\nDELETE from howboutthemcowboys\r\nGO",
+            "source": "USE master\r\nGO\r\nALTER DATABASE gocowboys SET ACCELERATED_DATABASE_RECOVERY = OFF\r\nGO\r\n-- Try to delete a bunch of rows\r\nUSE gocowboys\r\nGO\r\nBEGIN TRAN\r\nDELETE from howboutthemcowboys\r\nGO",
             "metadata": {},
             "outputs": [
                 {
@@ -164,18 +165,32 @@
                         "text/html": "Commands completed successfully."
                     },
                     "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1000000 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:01:15.761"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 3
         },
         {
             "cell_type": "markdown",
-            "source": "## Step 4: Checkpoint the database and kill the server\r\nCheckpoint will flush any dirty pages but the transaction is not committed. Shutting down the server with NOWAIT will not attempt to roll back active transactions. Therefore, SQL Server has to run undo to rollback this transaction. \r\n\r\nSeparate from this notebook, use a New Query in Azure Data Studio and run the following commands as a sysadmin. Restart SQL Server and then examine the ERRORLOG to see how long recovery takes for the database.\r\n\r\n<pre>USE gocowboys\r\nGO\r\nCHECKPOINT\r\nGO\r\nSHUTDOWN WITH NOWAIT\r\nGO</pre>",
+            "source": "## Step 4: Checkpoint the database, shutdown SQL Server WITH NOWAIT, and restart it\r\nCheckpoint will flush any dirty pages but the transaction is not committed. Shutting down the server with NOWAIT will not attempt to roll back active transactions. Therefore, SQL Server has to run undo to rollback this transaction. \r\n\r\nSeparate from this notebook, use a New Query in Azure Data Studio and run the following commands as a sysadmin. \r\n\r\n**Restart SQL Server and then examine the ERRORLOG to see how long recovery takes for the database. SQL Server must fully recover the database before you go to the next step. Because there is so much to recover this could take 10 minutes or more**\r\n\r\n<pre>USE gocowboys\r\nGO\r\nCHECKPOINT\r\nGO\r\nSHUTDOWN WITH NOWAIT\r\nGO</pre>",
             "metadata": {}
         },
         {
             "cell_type": "markdown",
-            "source": "## Step 5: Create the table again for a second test\r\nUse the same code as before to create the table with a million rows. But turn on Accelerated Database Recovery first.",
+            "source": "## Step 5: Create the table again for a second test\r\nUse the same code as before to create the table with a million rows. But turn on Accelerated Database Recovery first.\r\n\r\nYou may first see a connection error first since you shutdown SQL Server in the previous step but the cell should retry the connection and run the T-SQL statements.",
             "metadata": {}
         },
         {
@@ -185,8 +200,8 @@
             "outputs": [
                 {
                     "output_type": "error",
-                    "ename": "",
                     "evalue": "Msg 0, Level 20, State 0, Line 0\r\nThe connection is broken and recovery is not possible.  The connection is marked by the server as unrecoverable.  No attempt was made to restore the connection.",
+                    "ename": "",
                     "traceback": []
                 },
                 {
@@ -248,40 +263,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:56.034"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 25
-        },
-        {
-            "cell_type": "markdown",
-            "source": "## Step 6: Delete all the rows in the table in a transaction\r\nSame code as before to delete all rows but don't commit or rollback the transaction",
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "source": "-- Try to delete a bunch of rows\r\nUSE gocowboys\r\nGO\r\nBEGIN TRAN\r\nDELETE from howboutthemcowboys\r\nGO",
-            "metadata": {},
-            "outputs": [
-                {
-                    "output_type": "error",
-                    "ename": "",
-                    "evalue": "Msg 0, Level 20, State 0, Line 0\r\nThe connection is broken and recovery is not possible.  The connection is marked by the server as unrecoverable.  No attempt was made to restore the connection.",
-                    "traceback": []
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(100000 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:03.694"
+                        "text/html": "Total execution time: 00:01:14.070"
                     },
                     "metadata": {}
                 }
@@ -290,7 +272,41 @@
         },
         {
             "cell_type": "markdown",
-            "source": "## Step 7: Checkpoint the database and kill it to force recovery with Accelerated Database Recovery\r\nCheckpoint will flush any dirty pages but the transaction is not committed. Shutting down the server with NOWAIT will not attempt to roll back active transactions. Therefore, SQL Server has to run undo to rollback this transaction. \r\n\r\nSeparate from this notebook, use a New Query in Azure Data Studio and run the following commands as a sysadmin. Then examine the ERRORLOG to see how recovery takes for the database. You should see that recovery is significantly faster than before.\r\n\r\n<pre>USE gocowboys\r\nGO\r\nCHECKPOINT\r\nGO\r\nSHUTDOWN WITH NOWAIT\r\nGO</pre>",
+            "source": "## Step 6: Delete all the rows in the table in a transaction\r\nSame code as before to delete all rows and not commit or rollback the transaction",
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "source": "USE gocowboys\r\nGO\r\nBEGIN TRAN\r\nDELETE from howboutthemcowboys\r\nGO",
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1000000 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:25.405"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 5
+        },
+        {
+            "cell_type": "markdown",
+            "source": "## Step 7:  Checkpoint the database, shutdown SQL Server WITH NOWAIT, and restart it with Accelerated Database Recovery\r\nCheckpoint will flush any dirty pages but the transaction is not committed. Shutting down the server with NOWAIT will not attempt to roll back active transactions. Therefore, SQL Server has to run undo to rollback this transaction. \r\n\r\nSeparate from this notebook, use a New Query in Azure Data Studio and run the following commands as a sysadmin. Then restart SQL Server to examine the ERRORLOG to see how recovery takes for the database. You should see that recovery is significantly faster than before.\r\n\r\n<pre>USE gocowboys\r\nGO\r\nCHECKPOINT\r\nGO\r\nSHUTDOWN WITH NOWAIT\r\nGO</pre>",
             "metadata": {}
         }
     ]
