--- a/sql2019lab/04_DataVirtualization/sqldatahub/azuredb/azuredbexternaltable.ipynb
+++ b/sql2019lab/04_DataVirtualization/sqldatahub/azuredb/azuredbexternaltable.ipynb
@@ -17,11 +17,71 @@
             "cell_type": "markdown",
             "source": [
                 "# SQL Server 2019 Data Virtualization - Using Polybase to query Azure SQL Database\r\n",
-                "This notebook contains an example of how to use external tables to query data in Azure SQL Database without moving data. This example assumes you have access to an Azure SQL Database named wwiazure and that a table has been created to match the EXTERNAL TABLE in this notebook. You may need to change identity, secret, connection, database, schema, and remote table names to work with your Azure SQL Database.\r\n",
+                "This notebook contains an example of how to use external tables to query data in Azure SQL Database without moving data. You may need to change identity, secret, connection, database, schema, and remote table names to work with your Azure SQL Database.\r\n",
                 "\r\n",
                 "This notebook also assumes you are using SQL Server 2019 Release Candidate or later and that the Polybase feature has been installed and enabled.\r\n",
                 "\r\n",
                 "This notebook uses the sample WideWorldImporters sample database but can be used with any user database."
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Step 0: Create a database in Azure SQL, table, and add data\r\n",
+                "\r\n",
+                "Create a database in Azure SQL called **wwiazure**. Execute the following T-SQL to create a table and insert a row in the database\r\n",
+                "\r\n",
+                "```sql\r\n",
+                "DROP TABLE IF EXISTS [ModernStockItems]\r\n",
+                "GO\r\n",
+                "CREATE TABLE [ModernStockItems](\r\n",
+                "\t[StockItemID] [int] NOT NULL,\r\n",
+                "\t[StockItemName] [nvarchar](100) COLLATE Latin1_General_100_CI_AS NOT NULL,\r\n",
+                "\t[SupplierID] [int] NOT NULL,\r\n",
+                "\t[ColorID] [int] NULL,\r\n",
+                "\t[UnitPackageID] [int] NOT NULL,\r\n",
+                "\t[OuterPackageID] [int] NOT NULL,\r\n",
+                "\t[Brand] [nvarchar](50) COLLATE Latin1_General_100_CI_AS NULL,\r\n",
+                "\t[Size] [nvarchar](20) COLLATE Latin1_General_100_CI_AS NULL,\r\n",
+                "\t[LeadTimeDays] [int] NOT NULL,\r\n",
+                "\t[QuantityPerOuter] [int] NOT NULL,\r\n",
+                "\t[IsChillerStock] [bit] NOT NULL,\r\n",
+                "\t[Barcode] [nvarchar](50) COLLATE Latin1_General_100_CI_AS NULL,\r\n",
+                "\t[TaxRate] [decimal](18, 3) NOT NULL,\r\n",
+                "\t[UnitPrice] [decimal](18, 2) NOT NULL,\r\n",
+                "\t[RecommendedRetailPrice] [decimal](18, 2) NULL,\r\n",
+                "\t[TypicalWeightPerUnit] [decimal](18, 3) NOT NULL,\r\n",
+                "\t[LastEditedBy] [int] NOT NULL,\r\n",
+                "CONSTRAINT [PK_Warehouse_StockItems] PRIMARY KEY CLUSTERED \r\n",
+                "(\r\n",
+                "\t[StockItemID] ASC\r\n",
+                ")\r\n",
+                ")\r\n",
+                "GO\r\n",
+                "-- Now insert some data. We don't coordinate with unique keys in WWI on SQL Server\r\n",
+                "-- so pick numbers way larger than exist in the current StockItems in WWI which is only 227\r\n",
+                "INSERT INTO ModernStockItems VALUES\r\n",
+                "(100000,\r\n",
+                "'Dallas Cowboys Jersey',\r\n",
+                "5,\r\n",
+                "4, -- Blue\r\n",
+                "4, -- Box\r\n",
+                "4, -- Bob\r\n",
+                "'Under Armour',\r\n",
+                "'L',\r\n",
+                "30,\r\n",
+                "1,\r\n",
+                "0,\r\n",
+                "'123456789',\r\n",
+                "2.0,\r\n",
+                "50,\r\n",
+                "75,\r\n",
+                "2.0,\r\n",
+                "1\r\n",
+                ")\r\n",
+                "GO```\r\n",
+                ""
             ],
             "metadata": {}
         },
@@ -302,7 +362,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 8,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -384,7 +443,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>StockItemID</th><th>StockItemName</th><th>SupplierID</th><th>ColorID</th><th>UnitPackageID</th><th>OuterPackageID</th><th>Brand</th><th>Size</th><th>LeadTimeDays</th><th>QuantityPerOuter</th><th>IsChillerStock</th><th>Barcode</th><th>TaxRate</th><th>UnitPrice</th><th>RecommendedRetailPrice</th><th>TypicalWeightPerUnit</th><th>LastEditedBy</th></tr><tr><td>100000</td><td>Dallas Cowboys Jersey</td><td>5</td><td>4</td><td>4</td><td>4</td><td>Under Armour</td><td>L</td><td>30</td><td>1</td><td>0</td><td>123456789</td><td>2.000</td><td>50.00</td><td>75.00</td><td>2.000</td><td>1</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 8
@@ -421,7 +481,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -503,7 +562,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>StockItemID</th><th>StockItemName</th><th>SupplierID</th><th>ColorID</th><th>UnitPackageID</th><th>OuterPackageID</th><th>Brand</th><th>Size</th><th>LeadTimeDays</th><th>QuantityPerOuter</th><th>IsChillerStock</th><th>Barcode</th><th>TaxRate</th><th>UnitPrice</th><th>RecommendedRetailPrice</th><th>TypicalWeightPerUnit</th><th>LastEditedBy</th></tr><tr><td>100000</td><td>Dallas Cowboys Jersey</td><td>5</td><td>4</td><td>4</td><td>4</td><td>Under Armour</td><td>L</td><td>30</td><td>1</td><td>0</td><td>123456789</td><td>2.000</td><td>50.00</td><td>75.00</td><td>2.000</td><td>1</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 9
@@ -554,7 +614,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 10,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -790,7 +849,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>StockItemName</th><th>Brand</th><th>ColorName</th></tr><tr><td>Dallas Cowboys Jersey</td><td>Under Armour</td><td>Blue</td></tr><tr><td>DBA joke mug - daaaaaa-ta (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - daaaaaa-ta (White)</td><td>NULL</td><td>White</td></tr><tr><td>DBA joke mug - I will get you in order (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - I will get you in order (White)</td><td>NULL</td><td>White</td></tr><tr><td>DBA joke mug - it depends (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - it depends (White)</td><td>NULL</td><td>White</td></tr><tr><td>DBA joke mug - mind if I join you? (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - mind if I join you? (White)</td><td>NULL</td><td>White</td></tr><tr><td>DBA joke mug - SELECT caffeine FROM mug (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - SELECT caffeine FROM mug (White)</td><td>NULL</td><td>White</td></tr><tr><td>DBA joke mug - two types of DBAs (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - two types of DBAs (White)</td><td>NULL</td><td>White</td></tr><tr><td>DBA joke mug - you might be a DBA if (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>DBA joke mug - you might be a DBA if (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - (hip, hip, array) (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - (hip, hip, array) (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - a foo walks into a bar (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - a foo walks into a bar (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - fun was unexpected at this time (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - fun was unexpected at this time (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - inheritance is the OO way to become wealthy (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - inheritance is the OO way to become wealthy (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - Oct 31 = Dec 25 (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - Oct 31 = Dec 25 (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - old C developers never die (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - old C developers never die (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - that's a hardware problem (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - that's a hardware problem (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - there are 10 types of people in the world (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - there are 10 types of people in the world (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - this code was generated by a tool (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - this code was generated by a tool (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - understanding recursion requires understanding recursion (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - understanding recursion requires understanding recursion (White)</td><td>NULL</td><td>White</td></tr><tr><td>Developer joke mug - when your hammer is C++ (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>Developer joke mug - when your hammer is C++ (White)</td><td>NULL</td><td>White</td></tr><tr><td>IT joke mug - hardware: part of the computer that can be kicked (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>IT joke mug - hardware: part of the computer that can be kicked (White)</td><td>NULL</td><td>White</td></tr><tr><td>IT joke mug - keyboard not found … press F1 to continue (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>IT joke mug - keyboard not found … press F1 to continue (White)</td><td>NULL</td><td>White</td></tr><tr><td>IT joke mug - that behavior is by design (Black)</td><td>NULL</td><td>Black</td></tr><tr><td>IT joke mug - that behavior is by design (White)</td><td>NULL</td><td>White</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 10
