Updates to polybase notebooks and scripts
Update azure, cosmos, and hdfs to account for column names must now match target data source. And added in oracle notebook

--- a/sql2019lab/04_DataVirtualization/sqldatahub/azuredb/azuredbexternaltable.ipynb
+++ b/sql2019lab/04_DataVirtualization/sqldatahub/azuredb/azuredbexternaltable.ipynb
@@ -131,7 +131,7 @@
             "cell_type": "markdown",
             "source": [
                 "## Step 2: Create a database credential.\r\n",
-                "The database credential contains the IDENTITY (login) and SECRET (password) of the remote Azure SQL Database serve ror Managed Instance. Change this to the login and password for your server."
+                "The database credential contains the IDENTITY (login) and SECRET (password) of the remote Azure SQL Database server or Managed Instance. Change this to the login and password for your server."
             ],
             "metadata": {}
         },
@@ -243,7 +243,7 @@
             "cell_type": "markdown",
             "source": [
                 "## Step 5: Create an EXTERNAL TABLE\r\n",
-                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table and columns names for the external table can be your choice. But the columns must be specified in the same order as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
+                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table for the external table can be your choice. But the columns must be specified in the same order with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
                 "\r\n",
                 "The WITH clause specifies a LOCATION. This LOCATION is different than the EXTERNAL DATA SOURCE. This LOCATION indicates the [database].[schema].[table] of the remote table. The DATA_SOURCE clauses is the name of the EXTERNAL DATA SOURCE you created earlier."
             ],
