--- a/sql2019lab/04_DataVirtualization/sqldatahub/hdfs/hdfsexternaltable.ipynb
+++ b/sql2019lab/04_DataVirtualization/sqldatahub/hdfs/hdfsexternaltable.ipynb
@@ -284,7 +284,7 @@
             "cell_type": "markdown",
             "source": [
                 "## Step 7: Create an EXTERNAL TABLE\r\n",
-                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table and columns names for the external table can be your choice. But the columns must be specified in the same order as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
+                "An external table provides metadata so SQL Server knows how to map columns to the remote table. In the case of HDFS, you can use any table or column name and map in appropriate data types for data in the file.\r\n",
                 "\r\n",
                 "Create the external table to match the fileformat and file in HDFS<br>\r\n",
                 "LOCATION: path to file or directory that contains the data (relative to HDFS root)."
