--- a/sql2019lab/04_DataVirtualization/sqldatahub/oracle/oracleexternaltable.ipynb
+++ b/sql2019lab/04_DataVirtualization/sqldatahub/oracle/oracleexternaltable.ipynb
@@ -37,7 +37,7 @@
                 "Create a user called gl with the following SQL statement\r\n",
                 "\r\n",
                 "```sql\r\n",
-                "CREATE USER gl IDENTIFIED BY glpwd DEFAULT TABLESPACE users TEMPORARY TABLESPACE temp QUOTA UNLIMITED ON users;\r\n",
+                "CREATE USER gl IDENTIFIED BY <password> DEFAULT TABLESPACE users TEMPORARY TABLESPACE temp QUOTA UNLIMITED ON users;\r\n",
                 "GRANT CREATE SESSION TO gl;\r\n",
                 "GRANT CREATE TABLE TO gl;\r\n",
                 "GRANT CREATE VIEW TO gl;\r\n",
@@ -121,7 +121,7 @@
             "cell_type": "code",
             "source": [
                 "CREATE DATABASE SCOPED CREDENTIAL OracleCredentials   \r\n",
-                "WITH IDENTITY = 'gl', SECRET = 'glpwd'\r\n",
+                "WITH IDENTITY = 'gl', SECRET = '<password>'\r\n",
                 "GO"
             ],
             "metadata": {},
