--- a/sql2019lab/03_Availability/adr/adr.ipynb
+++ b/sql2019lab/03_Availability/adr/adr.ipynb
@@ -70,7 +70,7 @@
                 "SET @x = 0\r\n",
                 "WHILE (@x < 100000)\r\n",
                 "BEGIN\r\n",
-                "\tINSERT INTO howboutthemcowboys VALUES (@x, 'Jason Whitten returns in 2019')\r\n",
+                "\tINSERT INTO howboutthemcowboys VALUES (@x, 'Jason Witten returns in 2019')\r\n",
                 "\tSET @x = @x + 1\r\n",
                 "END\r\n",
                 "COMMIT TRAN\r\n",
